chapter_1/answers/exer_1.1/fifth
bash-3.2$ python fifth.py
  File "fifth.py", line 3
    c = a b
          ^
SyntaxError: invalid syntax
bash-3.2$ 

